--- a/api.html
+++ b/api.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <input type="text" id="name"/>
+    <button id="nameButton">Do Something</button>
     <script src="api.js"></script>
 </body>
 </html>
