--- a/api.html
+++ b/api.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" id="name"/>
+    <label for="name">name:</label>
+    <input type="text" id="name">
     <button id="nameButton">Do Something</button>
     <script src="api.js"></script>
 </body>
